--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,13 @@
             <artifactId>netty-socketio</artifactId>
             <version>1.7.17</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.firebase</groupId>
+            <artifactId>firebase-admin</artifactId>
+            <version>5.9.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
